--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- GSON provides JSON facilities for Java applications -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+
   </dependencies>
 
   <build>
