--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <sonar.host.url>http://localhost:9000/</sonar.host.url>
     <!--sonar.login>admin</sonar.login>
-    <sonar.password>admin</sonar.password-->
+    <sonar.token>admin</sonar.token-->
 
   </properties>
 
