Modified the deck structure and the CardHelper class, now CardHelper has all the weapons and powerUps stored in it, and has methods to get them by name. Added some tests and corrected some minor issues on json files

--- a/src/main/resources/weapons/GrenadeLauncher.json
+++ b/src/main/resources/weapons/GrenadeLauncher.json
@@ -78,7 +78,7 @@
                 {
                     "priority": 3,
                     "targetSpecification": {
-                        "tile": 1,
+                        "tile": true,
                         "different": {
                             "first": false,
                             "second": []
