--- a/files/weapons/GrenadeLauncher.json
+++ b/files/weapons/GrenadeLauncher.json
@@ -49,7 +49,7 @@
                             "second": []
                         },
 						"previous":{
-							"first": false,
+							"first": true,
 							"second": [
 								"B1"
 							]
@@ -76,7 +76,7 @@
             "name": "withExtraGrenade",
             "effects": [
                 {
-                    "priority": 3,
+                    "priority": 2,
                     "targetSpecification": {
                         "tile": true,
                         "different": {
@@ -101,7 +101,7 @@
                             "value": 1
                         }
                     ],
-                    "name": "B2",
+                    "name": "E2",
                     "price":[
                         {
                             "colour": "RED"
@@ -112,10 +112,12 @@
         }
     ],
     "name": "GrenadeLauncher",
-    "maxheight": 3,
+    "maxHeight": 3,
+    "constraint": "",
+    "invalidEliminationFlag": 0,
     "invalidCombinations": [
         [
-			"B2"
+			"E2"
         ],
 		[
 			"E1"
