--- a/files/weapons/GrenadeLauncher.json
+++ b/files/weapons/GrenadeLauncher.json
@@ -15,6 +15,7 @@
             "invalidEffects": [],
             "price":[],
             "maxHeight": 2,
+            "effectType":-1,
             "effects": [
                 {
                     "priority": 3,
@@ -88,6 +89,7 @@
                 }
             ],
             "maxHeight": 1,
+            "effectType":0,
             "effects": [
                 {
                     "priority": 3,
@@ -122,5 +124,5 @@
         }
     ],
     "name": "GrenadeLauncher",
-    "maxHeight": 3
+    "maxHeight": 2
 }
