Fixed map generation and GUI for setup

--- a/files/client.properties
+++ b/files/client.properties
@@ -1,8 +1,9 @@
-#RMI Server Name
-REMOTE_SERVER_NAME= GameServer;
-
-#In-game username
-username = ;
-
-#Token for uniquely identifying connections
-token = ;
+#updating properties
+#Mon Jun 24 01:58:09 CEST 2019
+SERVER_PORT=2013
+TESTING=true
+UI_MODE=GUI
+SERVER_IP=localhost
+TEST_USERNAME_BOUND=200000000
+SERVER_NAME=GameServer
+CONNECTION_MODE=RMI
