--- a/files/server.properties
+++ b/files/server.properties
@@ -1,11 +1,11 @@
 #RMI Server Name
-REMOTE_SERVER_NAME= GameServer;
+SERVER_NAME= GameServer
 
 #Server Port for Socket connections
 PORT = 2013
 
 #milliseconds
-MATCH_MAKING_TIMER = 10000;
+MATCH_MAKING_TIMER = 100
 
 #milliseconds
-MATCH_SETUP_TIMER = 30000;
+MATCH_SETUP_TIMER = 1000
