Updates on jsons and controllers

--- a/files/weapons/GrenadeLauncher.json
+++ b/files/weapons/GrenadeLauncher.json
@@ -3,11 +3,7 @@
     "cardColour": {
         "colour": "RED"
     },
-    "price": [
-        {
-            "colour": "RED"
-        }
-    ],
+    "price": [],
     "weaponEffects": [
         {
             "name": "basicEffect",
