--- a/files/client.properties
+++ b/files/client.properties
@@ -1,9 +1,10 @@
 #updating properties
 #Mon Jun 24 01:58:09 CEST 2019
 SERVER_PORT=2013
-TESTING=true
+TESTING=false
 UI_MODE=GUI
 SERVER_IP=localhost
+CLIENT_IP=localhost
 TEST_USERNAME_BOUND=200000000
 SERVER_NAME=GameServer
 CONNECTION_MODE=Socket
