--- a/files/server.properties
+++ b/files/server.properties
@@ -2,7 +2,7 @@
 SERVER_NAME= GameServer
 
 #Server IP
-ADDRESS = localhost
+ADDRESS = 192.168.43.129
 
 #Server Port for Socket connections
 PORT = 2013
