--- a/files/client.properties
+++ b/files/client.properties
@@ -3,8 +3,8 @@
 SERVER_PORT=2013
 TESTING=false
 UI_MODE=GUI
-SERVER_IP=localhost
-CLIENT_IP=localhost
+SERVER_IP= 172.20.10.13
+CLIENT_IP=172.20.10.13
 TEST_USERNAME_BOUND=200000000
 SERVER_NAME=GameServer
-CONNECTION_MODE=Socket
+CONNECTION_MODE=RMI
