--- a/files/client.properties
+++ b/files/client.properties
@@ -1,10 +1,10 @@
 #updating properties
 #Mon Jun 24 01:58:09 CEST 2019
 SERVER_PORT=2013
-TESTING=false
+TESTING=true
 UI_MODE=GUI
-SERVER_IP=192.168.43.129
-CLIENT_IP=192.168.43.55
+SERVER_IP=192.168.43.55
+CLIENT_IP=192.168.43.129
 TEST_USERNAME_BOUND=200000000
 SERVER_NAME=GameServer
 CONNECTION_MODE=RMI
