--- a/files/server.properties
+++ b/files/server.properties
@@ -2,13 +2,13 @@
 SERVER_NAME= GameServer
 
 #Server IP
-ADDRESS = 192.168.43.129
+ADDRESS = localhost
 
 #Server Port for Socket connections
 PORT = 2013
 
 #milliseconds
-MATCH_MAKING_TIMER = 10
+MATCH_MAKING_TIMER = 20
 
 #milliseconds
 MATCH_SETUP_TIMER = 25
