Push it to the limits

--- a/files/server.properties
+++ b/files/server.properties
@@ -2,13 +2,13 @@
 SERVER_NAME= GameServer
 
 #Server IP
-ADDRESS = localhost
+ADDRESS = 172.20.10.3
 
 #Server Port for Socket connections
 PORT = 2013
 
 #milliseconds
-MATCH_MAKING_TIMER = 20
+MATCH_MAKING_TIMER = 10
 
 #milliseconds
 MATCH_SETUP_TIMER = 25
