IsWeapon GUI implementation.

--- a/files/client.properties
+++ b/files/client.properties
@@ -1,10 +1,9 @@
 #updating properties
 #Mon Jun 24 01:58:09 CEST 2019
 SERVER_PORT=2013
-TESTING=false
+TESTING=true
 UI_MODE=GUI
-SERVER_IP=localhost
-CLIENT_IP=192.168.43.129
+SERVER_IP=172.20.10.3
 TEST_USERNAME_BOUND=200000000
 SERVER_NAME=GameServer
 CONNECTION_MODE=Socket
