--- a/files/client.properties
+++ b/files/client.properties
@@ -6,4 +6,4 @@ UI_MODE=GUI
 SERVER_IP=172.20.10.13
 TEST_USERNAME_BOUND=200000000
 SERVER_NAME=GameServer
-CONNECTION_MODE=Socket
+CONNECTION_MODE=RMI
