--- a/files/server.properties
+++ b/files/server.properties
@@ -2,7 +2,7 @@
 SERVER_NAME= GameServer
 
 #Server IP
-ADDRESS = 172.20.10.13
+ADDRESS = 172.20.10.3
 
 #Server Port for Socket connections
 PORT = 2013
@@ -18,3 +18,6 @@ TURN_TIMER= 180000
 
 #milliseconds
 INTERTURN_TIMER = 50000
+
+#skulls
+DEFAULT_SKULLS = 1
